# AIInfra-QA

./: .gitignore
ai-infra/: .env.example  CMakeLists.txt  compose.yaml
ai-infra/apps/: infer_server.cpp
ai-infra/docker/: Dockerfile  Dockerfile.cpu
ai-infra/include/aiinfra/: runtime_config.h
ai-infra/include/aiinfra/concurrency/: mpmc_queue.h  thread_pool.h
ai-infra/include/aiinfra/gpu/: kv_cache_manager.h  paged_memory_pool.h
ai-infra/include/aiinfra/model/: inference_engine.h  model_manager.h
ai-infra/include/aiinfra/net/: http_server.h
ai-infra/include/aiinfra/observability/: gpu_probe.h  metrics.h
ai-infra/include/aiinfra/scheduler/: admission_control.h  continuous_batcher.h  types.h
ai-infra/src/concurrency/: thread_pool.cpp
ai-infra/src/gpu/: cuda_runtime_bridge.cu  kv_cache_manager.cpp  paged_memory_pool.cpp
ai-infra/src/model/: model_manager.cpp  upstream_engine.cpp
ai-infra/src/net/: http_server.cpp
ai-infra/src/observability/: gpu_probe.cpp  metrics.cpp
ai-infra/src/scheduler/: continuous_batcher.cpp
ai-infra/tests/: test_batcher.cpp  test_kv_cache_manager.cpp  test_memory_pool.cpp  test_mpmc_queue.cpp
cpp-backend/: .env.example  CppBackend.pro  build.bat  main.cpp  server.cpp  server.h  start.bat
frontend/: AIInfraQA.pro  Dockerfile  api_client.cpp  api_client.h  build.bat  compose.yaml  index.html  main.cpp  mainwindow.cpp  mainwindow.h  package-lock.json  package.json  setup-windows.bat  start.bat  status.bat  stop.bat  vite.config.js
frontend/client/: App.jsx  api.js  main.jsx  styles.css
python-backend/: .env.example  Dockerfile  requirements.txt
python-backend/backend/: code_workspace.py  config.py  main.py  retrieval.py  schemas.py  service.py  storage.py  text.py
python-backend/backend/providers/: ai_infra.py  base.py  deepseek.py  registry.py
python-backend/backend_tests/: mock_deepseek.py  test_chat.py  test_retrieval.py  test_service.py  test_text.py
